--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </div>
 
     <form id="toDoForm" class="hidden">
-        <span></span>
+        <span>What is your main focus for today?</span>
         <input type="text" required />
     </form>
 
