Update to-do text chaning function
to-do 모두 완료시 you are awesome
제거시 기존 text
to-do 5개 입력시 더이상 입력 못하게 설정

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <form id="toDoForm" class="hidden">
         <span>What is your main focus for today?</span>
-        <input type="text" required />
+        <input type="text" required maxlength="15"/>
     </form>
 
     <ul id="toDoList">
